# Omoti-Music-Client

./: CMakeLists.txt  README.md
cmake/: CopyBuiltDll.cmake
src/client/: Omoti.h
src/client/misc/: MusicHelperClient.cpp  MusicHelperClient.h
src/client/render/: Renderer.cpp
src/client/resource/: InitResources.h
src/client/screen/screens/: ClickGUI.cpp  ClickGUI.h
